2006-10-25    <drblast@users.sourceforge.net>

	* Main.cpp (main): Added actions to edit menu.  Removed close button on output windows.

2006-10-20    <drblast@users.sourceforge.net>

	* Interpreter.cpp: Added internationalization support.

	* BasicEdit.cpp: Added internationalization support.

	* Main.cpp (main): Added internationalization support.

2006-10-18    <drblast@users.sourceforge.net>

	* BasicEdit.cpp (BasicEdit): Editor now won't accept rich text, fixing weird font bugs.

	* RunController.cpp (saveByteCode): Added saveByteCode function which saves the compiled byte code to a .kbc file.

	* Main.cpp (main): Added save byte code function and Advanced menu.

	* LEX\basicParse.y: Changed to more dynamic allocation of byteCode to reduce memory footprint for small programs and to prevent memory errors from occurring on 64-bit architectures.

	* Interpreter.cpp (execByteCode): Added mathematical functions FLOOR, CEIL, RAND, SIN, COS, TAN, and ABS
	Separated initialize from compileProgram to support saving byte code as a file.
	
2006-10-16    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Added and, not, xor, and or operations

	* LEX\basicParse.y: Added AND, NOT, XOR, OR

	* LEX\basicParse.l: Added floor, ceil, int, str, and rand tokens

	* LEX\basicParse.y: Added arrays and string arrays.

	* Interpreter.h (struct variable): Added arrays and string arrays.

	* Interpreter.cpp (execByteCode): Added arrays and string arrays.

2006-10-11    <drblast@users.sourceforge.net>

	* BasicGraph.cpp (keyPressEvent): Added keyPressEvent to set currentKey global variable whenever a key is pressed during run time.

	* LEX\basicParse.y: Added KEY keyword as floatexpr

	* Interpreter.cpp (execByteCode): Added OP_KEY operation, which gets the last key pressed.

2006-10-09    <drblast@users.sourceforge.net>

	* LEX\basicParse.y: Added colon as multiple statement separator

2006-10-07    <drblast@users.sourceforge.net>
